--- a/css/social.css
+++ b/css/social.css
@@ -28,8 +28,14 @@
     float: right;
 }
 
-.bejegyzes .img {
+.img {
     margin: 5px;
     width: 40px;
     height: 40px;
+}
+
+.barat {
+    background: lightgoldenrodyellow;
+    border: solid 1px yellow;
+    margin: 20px;
 }
