--- a/css/social.css
+++ b/css/social.css
@@ -57,3 +57,17 @@ body {
     border: solid 1px yellow;
     margin: 20px;
 }
+
+.albumheader {
+    clear: both;
+}
+
+.albumkep {
+    float: left;
+}
+
+.albumkep .img {
+    margin: 5px;
+    width: 300px;
+    height: 300px;
+}
